# apoe-genotyping-toolkit

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  apoe_caller.py  merge_batches.sh  pyproject.toml  run_apoe_pipeline.sh  slurm_template.sh  snp_list.txt
.github/workflows/: ci.yml
data/example/: example_cohort.csv  example_dosages.csv
legacy/: apoe_caller.py
src/apoe_genotyping_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/apoe_toolkit/: __init__.py  caller.py  cli.py  feasibility.py  stratifier.py
tests/: test_caller.py  test_feasibility.py  test_stratifier.py
